--- a/README.Rmd
+++ b/README.Rmd
@@ -37,8 +37,24 @@ devtools::install_github("NIM-ACh/youngSwimmers")
 This is a basic example which shows you how to access summary statistics:
 
 ```{r example}
-library(youngSwimmers)
+library(youngSwimmers) # Load the package
 
-summary(youngswimmers[, 4:8])
+summary(youngswimmers[, 4:6])
+```
+
+For more information on the use of the package, please check the article ["Using the youngswimmers dataset"](https://nim-ach.github.io/youngSwimmers/articles/articles/using_data.html). There you will find information for computing descriptive statistics and plotting functionalities.
+
+## Citation
+
+To cite this package, run the next line of code:
+
+```r
+citation("youngSwimmers")
+```
+
+And you will get the next output:
+
+```{r, echo=FALSE, comment=""}
+citation("youngSwimmers")
 ```
 
