--- a/README.Rmd
+++ b/README.Rmd
@@ -21,11 +21,11 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/youngSwimmers)](https://CRAN.R-project.org/package=youngSwimmers)
 <!-- badges: end -->
 
-This <i class="fab fa-r-project"></i> package contains complementary tools for research reproducibility and exploratory data analysis for young elite swimmers study (link to original study [here](https://doi.org/10.3389/fphys.2021.769085)).
+This is an `R` package that contains complementary tools for research reproducibility and exploratory data analysis for young elite swimmers study (link to original study [here](https://doi.org/10.3389/fphys.2021.769085)).
 
 ## About <i class="fab fa-r-project"></i>
 
-<i class="fab fa-r-project"></i> is a high-level statistical programming language used for data analysis, as well for development creating software, websites, reports, applications, e-books, etc. For more info you can visit the [R-project](https://www.r-project.org/about.html) site.
+`R` is a high-level statistical programming language used for data analysis, as well for development creating software, websites, reports, applications, e-books, etc. For more info you can visit the [R-project](https://www.r-project.org/about.html) site.
 
 ## Installation
 
@@ -43,7 +43,7 @@ This is a basic example which shows you how to access summary statistics:
 ```{r example}
 library(youngSwimmers) # Load the package
 
-summary(youngswimmers[, 4:6])
+summary(swimmers[, 4:6])
 ```
 
 For more information on how to use the package and the data within, please visit the section ["Using the youngswimmers dataset"](https://nim-ach.github.io/youngSwimmers/articles/articles/using_data.html) from our website. There you will find information for computing descriptive statistics and plotting functionalities.
