--- a/vignettes/articles/using_data.Rmd
+++ b/vignettes/articles/using_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Using the youngswimmers dataset"
+title: "Using the `swimmers` dataset"
 ---
 
 ```{r, include = FALSE}
@@ -24,13 +24,13 @@ But because the data is in [long format](https://en.wikipedia.org/wiki/Wide_and_
 Lets explore the mean weight for each time period. For that we can use `data.table` for ease of use (for details on data.table please see [this](https://rdatatable.gitlab.io/data.table/)). It is worth noting that the `data.table` package is imported directly into the package when is loaded.
 
 ```{r}
-youngswimmers[, .(mean_weight = mean(weight, na.rm = TRUE)), period]
+swimmers[, .(mean_weight = mean(weight, na.rm = TRUE)), period]
 ```
 
 But what if we want the mean weight between males and females for each time period? We could write it this way. For that we will use `tapply()` (for nested operations).
 
 ```{r}
-youngswimmers[, tapply(weight, sex, mean, na.rm = TRUE, simplify = FALSE), period]
+swimmers[, tapply(weight, sex, mean, na.rm = TRUE, simplify = FALSE), period]
 ```
 
 But we can pass any function that we want into `tapply()` (that returns an object of length one). Lets try create a custom function thah computes the mean and standard deviation.
@@ -55,20 +55,20 @@ my_mean_and_sd <- function(x) {
 Now lets try our custom function to get the mean and standard deviation of weight between males and females for each time period.
 
 ```{r}
-youngswimmers[, tapply(weight, sex, my_mean_and_sd, simplify = FALSE), period]
+swimmers[, tapply(weight, sex, my_mean_and_sd, simplify = FALSE), period]
 ```
 
 You can replace weigth for any of the variables available in the dataset. For details on the dataset, check the [documentation](https://nim-ach.github.io/youngSwimmers/reference/youngSwimmers.html).
 
 # Plot the data
 
-For plotting you can use your favourite library (ggplot2, lattice, base-r, etc). Lets try an example with base-r plotting system.
+For plotting you can use your favourite library (ggplot2, lattice) or the default base-r plotting system. Lets try an example with base-r plotting system.
 
 For this example lets plot the change of mean weight across time periods between males and females.
 
 ```{r}
 # Get variables (first bracket) and then drop missing values (second bracket)
-plot_data <- youngswimmers[, .(sex, period, weight)][, na.omit(.SD)] 
+plot_data <- swimmers[, .(sex, period, weight)][, na.omit(.SD)] 
 
 # Plot data using the mean
 with(plot_data, interaction.plot(period, sex, weight, fun = mean))
@@ -82,7 +82,7 @@ Quite an interesting picture! Now lets try a boxplot of weight across time group
 # First load ggplot2
 library(ggplot2)
 
-ggplot(youngswimmers, aes(x = period, y = weight, fill = sex)) +
+ggplot(swimmers, aes(x = period, y = weight, fill = sex)) +
   geom_boxplot()
 ```
 
