upgrades on homepage

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,7 +34,7 @@ You can install the latest development version of youngSwimmers from [GitHub](ht
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("NIM-ACh/youngSwimmers")
+devtools::install_github("nim-ach/youngSwimmers")
 ```
 
 ## Example
